src/test/ui/binop/binop-typeck.stderr
error[E0369]: binary operation `+` cannot be applied to type `bool`
  --> $DIR/binop-typeck.rs:6:15
   |
LL |     let z = x + y;
   |             - ^ - {integer}
   |             |
   |             bool
   |
   = note: an implementation of `std::ops::Add` might be missing for `bool`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
